--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <resources>
-    <string name="app_name">GizliRehber</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="app_name">Gizli Rehber</string>
+
+
+    <string name="global_enable_contact_phone_state_permissions">Please enable contact and read phone state permission</string>
+    <string name="global_message_title">Message</string>
+    <string name="global_call_screening_required_message">You have to select Call Screening app in the following dialog in order for app to work.</string>
+
+
 </resources>
