--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="guncelle">Güncelle</string>
     <string name="sil">Sil</string>
     <string name="ara">Ara</string>
+    <string name="phone_number">Phone Number</string>
 </resources>
